# drake

./:   -  .UNITTEST  .bazeliskrc  .bazelproject  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .cproject  .dockerignore  .drake-find_resource-sentinel  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .hooks-config  .mailmap  .matlabroot  .project  .ruff.toml  .travis.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  CTestConfig.cmake  CTestCustom.cmake  CTestCustom.cmake.in  CTestTestfile.cmake  Contents.m  DartConfiguration.tcl  Doxyfile  DrakeExternals.cmake  LICENSE.TXT  LICENSE.md  (+71 more)
attic/: BUILD.bazel  CPPLINT.cfg  README.md  attic_warning.cc  attic_warning.h  build_macros.bzl  warning.cc  warning.h
automotive/: BUILD.bazel  README.md  agent_trajectory.cc  agent_trajectory.h  automotive.h  automotive_demo.cc  automotive_demo.py  automotive_simulator.cc  automotive_simulator.h  bicycle_car.cc  bicycle_car.h  bicycle_car_parameters.named_vector  bicycle_car_state.named_vector  box_car_vis.cc  box_car_vis.h  calc_ongoing_road_position.cc  calc_ongoing_road_position.h  calc_smooth_acceleration.cc  calc_smooth_acceleration.h  car_sim_lcm_common.cc  car_vis.cc  car_vis.h  car_vis_applicator.cc  car_vis_applicator.h  create_trajectory_params.cc  create_trajectory_params.h  curve2.cc  curve2.h  deprecated.h  driving_command.named_vector  driving_command_mux.cc  driving_command_mux.h  dynamic_bicycle_car.cc  dynamic_bicycle_car.h  dynamic_bicycle_car_input.named_vector  dynamic_bicycle_car_params.named_vector  dynamic_bicycle_car_state.named_vector  idm_controller.cc  idm_controller.h  idm_planner.h  (+45 more)
bindings/: BUILD.bazel  bazel_workaround_4594_libdrake.bzl  bazel_workaround_4594_libdrake_py.cc
common/: BUILD.bazel  README.md  add_text_logging_gflags.cc  atomic_shared_ptr.h  autodiff.cc  autodiff.h  autodiff_overloads.h  autodiffxd-old.txt  autodiffxd.h  autodiffxd_make_coherent.h  bit_cast.h  cond.cc  cond.h  constants.h  copyable_unique_ptr.h  cpu_capabilities.cc  cpu_capabilities.h  default_scalars.h  diagnostic_policy.cc  diagnostic_policy.h  double_overloads.cc  double_overloads.h  doxygen_cxx.h  drake_assert.cc  drake_assert.h  drake_assert_and_throw.cc  drake_assertion_error.h  drake_bool.h  drake_bool_deprecated.h  drake_copyable.h  drake_deprecated.cc  drake_deprecated.h  drake_export.h  drake_marker.cc  drake_marker.h  drake_nodiscard.h  drake_optional.h  drake_path.cc  drake_path.h  drake_throw.h  (+167 more)
doc/: 404.html  BUILD.bazel  Doxyfile  Doxyfile_CXX.in  DoxygenLayout.xml  DrakeURDF.xsd  MathematicalProgram tutorial.ipynb  README.md  README.txt  WingandThrustNotes.doc  WingandThrustNotes.odt  _config.yml  aerodynamics.texp  basic_init.vim  bazel.md  bazel.rst  browserconfig.xml  build.py  buildcop.md  buildcop.rst  building_kcov.rst  changesToSupportingTools.txt  checkinProcedures.txt  clion.md  clion.rst  codeStyle.txt  code_review_checklist.md  code_review_checklist.rst  code_style_guide.md  code_style_guide.rst  code_style_tools.md  code_style_tools.rst  conf.py  credits.md  credits.rst  cxx_inl.rst  defs.bzl  defs.py  design.rst  developers.html  (+109 more)
drake/: .UNITTEST  .editorconfig  BUILD  BUILD.bazel  CMakeCache.txt  CMakeLists.txt  CPPLINT.cfg  CTestConfig.cmake  CTestCustom.cmake  CTestCustom.cmake.in  Contents.m  FindMatlab.cmake  Makefile  MatlabTestsRedirect.cmake  addpath_drake.m  build_components.bzl  build_components_refresh.py  drake-config.cmake.in  install_prereqs.sh  jenkins_launch_matlab.m  pragmaonce.sh  rmpath_drake.m  runAllTests.m  valgrind.supp
drake_gym/: BUILD.bazel  README.md  drake_gym.py
examples/: .gitignore  BUILD.bazel  Contents.m  CubicPolynomialExample.m  DoubleIntegrator.m  GridWorld.m  LinearGaussianExample.m  README  README-MATLAB.md  SimpleCTExample.m  SimpleDTExample.m  SimpleMixedCTDTExample.m  SineSys.m  VanDerPol.m  XCubed.m  XCubedVisualizer.m  commonLyapunovForLinearSystems.m  fort.15  simple_continuous_time_system.cc  simple_discrete_time_system.cc  simple_mixed_continuous_and_discrete_time_system.cc  sinsys.m  xcubed.m
fem/: BUILD.bazel  hyperelastic_constitutive_model.h  stiffness_matrix.cc  stiffness_matrix.h
geometry/: BUILD.bazel  collision_filter_declaration.cc  collision_filter_declaration.h  collision_filter_manager.cc  collision_filter_manager.h  collision_group.h  collision_remover.cc  collision_remover.h  deformable_mesh.cc  deformable_mesh.h  deformable_mesh_with_bvh.cc  deformable_mesh_with_bvh.h  deformable_triangle_surface_mesh.cc  deformable_triangle_surface_mesh.h  deformable_triangle_surface_mesh_test.cc  drake_visualizer.cc  drake_visualizer.h  drake_visualizer_params.h  fcl_engine.cc  fcl_engine.h  frame_id_vector.cc  frame_id_vector.h  frame_kinematics_vector.cc  frame_kinematics_vector.h  geometry_cloning.cc  geometry_cloning.h  geometry_context.cc  geometry_context.h  geometry_doxygen.h  geometry_file_formats_doxygen.h  geometry_frame.cc  geometry_frame.h  geometry_ids.cc  geometry_ids.h  geometry_index.h  geometry_infrastructure_doxygen.h  geometry_instance.cc  geometry_instance.h  geometry_properties.cc  geometry_properties.h  (+128 more)
lcm/: BUILD.bazel  drake_lcm.cc  drake_lcm.h  drake_lcm_base.cc  drake_lcm_base.h  drake_lcm_disabled.cc  drake_lcm_interface.cc  drake_lcm_interface.h  drake_lcm_log.cc  drake_lcm_log.h  drake_lcm_log_disabled.cc  drake_lcm_message_handler_interface.h  drake_lcm_params.cc  drake_lcm_params.h  drake_mock_lcm.cc  drake_mock_lcm.h  lcm_messages.cc  lcm_messages.h  lcm_receive_thread.cc  lcm_receive_thread.h  lcmt_drake_signal_utils.cc  lcmt_drake_signal_utils.h  translator_base.h
lcmtypes/: BUILD.bazel  CMakeLists.txt  README.md  __init__.py  defs.bzl  experimental_lcmt_deformable_tri.lcm  experimental_lcmt_deformable_tri_mesh_init.lcm  experimental_lcmt_deformable_tri_mesh_update.lcm  experimental_lcmt_deformable_tri_meshes_init.lcm  experimental_lcmt_deformable_tri_meshes_update.lcm  foot_contact_estimate_t.lcm  force_torque_t.lcm  lcmt_acrobot_u.lcm  lcmt_acrobot_x.lcm  lcmt_active_support.lcm  (+84 more)
(+25871 files in other folders)
